--- a/LoanClassifier.ipynb
+++ b/LoanClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -15,6 +15,41 @@
     "from sklearn.preprocessing import StandardScaler, LabelEncoder, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data processing\n",
+    "df = pd.read_csv('bank.csv')\n",
+    "X = df.iloc[:, 0:11].values\n",
+    "Y = df.iloc[:, 8:9].values\n",
+    "# label encoding\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "X[:, 1] = le.fit_transform(X[:, 1])\n",
+    "X[:, 2] = le.fit_transform(X[:, 2])\n",
+    "X[:, 3] = le.fit_transform(X[:, 3])\n",
+    "X[:, 5] = le.fit_transform(X[:, 5])\n",
+    "X[:, 7] = le.fit_transform(X[:, 7])\n",
+    "X[:, 8] = le.fit_transform(X[:, 8])\n",
+    "Y[:, 0] = le.fit_transform(Y[:, 0])\n",
+    "\n",
+    "# One Hot Encoding\n",
+    "\n",
+    "ohe = OneHotEncoder(categorical_features=[1])\n",
+    "X = ohe.fit_transform(X).toarray()\n",
+    "\n",
+    "# Creating sets\n",
+    "X_train, X_test, Y_train, Y_test =  train_test_split(X, Y, test_size=0.2, random_state=1)\n",
+    "\n",
+    "# feature Scaling\n",
+    "X_train = sc_X.fit_transform(X_train)\n",
+    "X_test = sc_X.transform(X_test)\n",
+    "# DATA PROCESSING ENDS"
    ]
   }
  ],
