--- a/LoanClassifier.ipynb
+++ b/LoanClassifier.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "scrolled": false
    },
@@ -336,8 +336,20 @@
       "Epoch 98/100\n",
       "8929/8929 [==============================] - 3s - loss: 0.3483 - acc: 0.8705     \n",
       "Epoch 99/100\n",
-      "2680/8929 [========>.....................] - ETA: 2s - loss: 0.3540 - acc: 0.8631"
+      "8929/8929 [==============================] - 3s - loss: 0.3483 - acc: 0.8703     \n",
+      "Epoch 100/100\n",
+      "8929/8929 [==============================] - 3s - loss: 0.3481 - acc: 0.8705     \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x2060ab208d0>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -347,20 +359,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[[False]\n",
-      " [ True]\n",
-      " [False]\n",
-      " ..., \n",
-      " [False]\n",
-      " [False]\n",
-      " [False]]\n"
+      "c:\\users\\hello\\appdata\\local\\conda\\conda\\envs\\tensorflow\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:2289: UserWarning: Expected no kwargs, you passed 1\n",
+      "kwargs passed to function are ignored with Tensorflow backend\n",
+      "  warnings.warn('\\n'.join(msg))\n"
      ]
     }
    ],
@@ -372,20 +380,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0]\n",
-      " [1]\n",
-      " [0]\n",
-      " ..., \n",
-      " [0]\n",
-      " [0]\n",
-      " [0]]\n"
+      "[[1929    4]\n",
+      " [ 299    1]]\n"
      ]
     }
    ],
