--- a/LoanClassifier.ipynb
+++ b/LoanClassifier.ipynb
@@ -380,7 +380,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -393,9 +404,8 @@
     }
    ],
    "source": [
-    "#confusion matrix\n",
-    "cm = confusion_matrix(Y_test, Y_pred)\n",
-    "print(cm)"
+    "c = confusion_matrix(Y_test, Y_pred)\n",
+    "print(c)"
    ]
   }
  ],
