--- a/LoanClassifier.ipynb
+++ b/LoanClassifier.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -44,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# data processing\n",
@@ -78,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# importing Deep Learning Libraries\n",
@@ -106,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# compiling classifier\n",
@@ -117,6 +125,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -305,13 +314,7 @@
       "8929/8929 [==============================] - 3s - loss: 0.3494 - acc: 0.8706     \n",
       "Epoch 86/100\n",
       "8929/8929 [==============================] - 4s - loss: 0.3491 - acc: 0.8706     \n",
-      "Epoch 87/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 87/100\n",
       "8929/8929 [==============================] - 3s - loss: 0.3488 - acc: 0.8701     \n",
       "Epoch 88/100\n",
       "8929/8929 [==============================] - 3s - loss: 0.3491 - acc: 0.8709     \n",
@@ -360,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -392,7 +397,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -425,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.0"
   },
   "varInspector": {
    "cols": {
